# pySigma-backend-quickwit

./: .cruft.json  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
sigma/backends/quickwit/: __init__.py  quickwit.py
sigma/pipelines/quickwit/: __init__.py  quickwit.py
tests/: test_backend_quickwit.py  test_pipelines_quickwit.py
