[tool.poetry]
name = "pySigma-backend-quickwit"
version = "0.1.4"
description = "pySigma Quickwit backend"
authors = ["Alex Sinnott <alex@sinn.io>"]
license = "MIT"
repository = "https://github.com/sifex/pySigma-backend-quickwit"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.9"
pysigma = ">0.11.16,<2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
coverage = "^7.5.4"
ruff = "^0.4.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]